--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-win": "electron-builder --win",
     "build-msix": "electron-builder --win --publish never",
     "build-msix-script": "node build-msix.js",
+    "fix-build": "node fix-build.js",
     "dist": "electron-builder --publish never"
   },
   "build": {
@@ -39,7 +40,8 @@
       "publisherName": "Arman7777-coder",
       "certificateFile": false,
       "certificatePassword": false,
-      "verifyUpdateCodeSignature": false
+      "verifyUpdateCodeSignature": false,
+      "sign": false
     },
     "appx": {
       "applicationId": "Windows11Planner",
