--- a/package.json
+++ b/package.json
@@ -37,7 +37,11 @@
           "target": "portable",
           "arch": ["x64"]
         }
-      ]
+      ],
+      "certificateFile": false,
+      "certificatePassword": false,
+      "verifyUpdateCodeSignature": false,
+      "sign": false
     },
     "appx": {
       "applicationId": "Windows11Planner",
