--- a/package.json
+++ b/package.json
@@ -34,14 +34,15 @@
     "win": {
       "target": [
         {
-          "target": "portable",
+          "target": "appx",
           "arch": ["x64"]
         }
       ],
       "certificateFile": false,
       "certificatePassword": false,
       "verifyUpdateCodeSignature": false,
-      "sign": false
+      "sign": false,
+      "windowsKit": "C:\\Program Files (x86)\\Windows Kits\\10\\bin\\10.0.26100.0\\arm64"
     },
     "appx": {
       "applicationId": "Windows11Planner",
