--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "appx": {
       "applicationId": "Windows11Planner",
       "publisher": "CN=Arman7777-coder",
-      "publisherDisplayName": "Arman7777-coder",
+      "publisherDisplayName": "NewHope",
       "identityName": "Windows11Planner",
       "displayName": "Windows 11 Planner",
       "backgroundColor": "#2563EB",
