--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
       "publisher": "CN=BBF25640-AF6B-4DC7-9F91-5C8D3847C5CF",
       "publisherDisplayName": "NewHope",
       "identityName": "50688NewHope.Planner",
-      "displayName": "Windows 11 Planner",
+      "displayName": "FocusPlanner",
       "backgroundColor": "#2563EB",
       "languages": ["en-US"]
     },
