--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
       "sign": false
     },
     "appx": {
-      "applicationId": "Planner",
+      "applicationId": "50688NewHope.FocusPlanner",
       "publisher": "CN=BBF25640-AF6B-4DC7-9F91-5C8D3847C5CF",
       "publisherDisplayName": "NewHope",
-      "identityName": "50688NewHope.Planner",
+      "identityName": "50688NewHope.FocusPlanner",
       "displayName": "FocusPlanner",
       "backgroundColor": "#2563EB",
       "languages": ["en-US"]
