--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
       "applicationId": "Planner",
       "publisher": "CN=BBF25640-AF6B-4DC7-9F91-5C8D3847C5CF",
       "publisherDisplayName": "NewHope",
-      "identityName": "NewHope.FocusPlanner",
+      "identityName": "50688NewHope.FocusPlanner",
       "displayName": "FocusPlanner",
       "backgroundColor": "#2563EB",
       "languages": ["en-US"]
